@@ -1,8 +1,8 @@
 use crate::{
     dp_error_anyhow, DP_CanvasState, DP_Image, DP_ImageScaleInterpolation, DP_Output, DP_UPixel8,
     DP_blend_color8_background, DP_blend_color8_to, DP_canvas_state_to_flat_image,
-    DP_file_output_new_from_path, DP_image_free, DP_image_height, DP_image_new,
-    DP_image_new_subimage, DP_image_pixels, DP_image_scale_pixels, DP_image_width,
+    DP_file_output_new_from_path, DP_file_output_new_from_stdout, DP_image_free, DP_image_height,
+    DP_image_new, DP_image_new_subimage, DP_image_pixels, DP_image_scale_pixels, DP_image_width,
     DP_image_write_jpeg, DP_image_write_png, DP_image_write_qoi, DP_image_write_webp,
     DP_output_free, DP_FLAT_IMAGE_RENDER_FLAGS,
 };
@@ -202,16 +202,32 @@ impl Image {
         self.write(path, DP_image_write_png)
     }
 
+    pub fn write_png_stdout(&self) -> Result<()> {
+        self.write_stdout(DP_image_write_png)
+    }
+
     pub fn write_jpeg(&self, path: &str) -> Result<()> {
         self.write(path, DP_image_write_jpeg)
+    }
+
+    pub fn write_jpeg_stdout(&self) -> Result<()> {
+        self.write_stdout(DP_image_write_jpeg)
     }
 
     pub fn write_qoi(&self, path: &str) -> Result<()> {
         self.write(path, DP_image_write_qoi)
     }
 
+    pub fn write_qoi_stdout(&self) -> Result<()> {
+        self.write_stdout(DP_image_write_qoi)
+    }
+
     pub fn write_webp(&self, path: &str) -> Result<()> {
         self.write(path, DP_image_write_webp)
+    }
+
+    pub fn write_webp_stdout(&self) -> Result<()> {
+        self.write_stdout(DP_image_write_webp)
     }
 
     fn write(
@@ -221,6 +237,22 @@ impl Image {
     ) -> Result<()> {
         let cpath = CString::new(path)?;
         let output = unsafe { DP_file_output_new_from_path(cpath.as_ptr()) };
+        self.write_with(output, func)
+    }
+
+    fn write_stdout(
+        &self,
+        func: unsafe extern "C" fn(*mut DP_Image, *mut DP_Output) -> bool,
+    ) -> Result<()> {
+        let output = unsafe { DP_file_output_new_from_stdout(false) };
+        self.write_with(output, func)
+    }
+
+    fn write_with(
+        &self,
+        output: *mut DP_Output,
+        func: unsafe extern "C" fn(*mut DP_Image, *mut DP_Output) -> bool,
+    ) -> Result<()> {
         if output.is_null() {
             return Err(dp_error_anyhow());
         }
